--- a/registration.html
+++ b/registration.html
@@ -114,69 +114,71 @@
                 <div class="col">
                     <h5>TYPE OF DISABILITY</h5>
                     <div class="form-check">
-                        <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
-                        <label class="form-check-label" for="flexCheckDefault">
+                        <input class="form-check-input" type="checkbox" value="Deaf/Hard of Hearing" id="deaf" name="deaf">
+                        <label class="form-check-label" for="deaf">
                             Deaf/Hard of Hearing
                         </label>
                     </div>
                     <div class="form-check">
-                        <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
-                        <label class="form-check-label" for="flexCheckDefault">
+                        <input class="form-check-input" type="checkbox" value="Intellectual Disability" id="intellectualDisability" name="intellectualDisability">
+                        <label class="form-check-label" for="intellectualDisability">
                             Intellectual Disability
                         </label>
                     </div>
                     <div class="form-check">
-                        <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
-                        <label class="form-check-label" for="flexCheckDefault">
+                        <input class="form-check-input" type="checkbox" value="Learning Disability" id="learningDisability" name="learningDisability">
+                        <label class="form-check-label" for="learningDisability">
                             Learning Disability
                         </label>
                     </div>
                     <div class="form-check">
-                        <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
-                        <label class="form-check-label" for="flexCheckDefault">
+                        <input class="form-check-input" type="checkbox" value="Mental Disability" id="mentalDisability" name="mentalDisability">
+                        <label class="form-check-label" for="mentalDisability">
                             Mental Disability
                         </label>
                     </div>
                     <div class="form-check">
-                        <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
-                        <label class="form-check-label" for="flexCheckDefault">
+                        <input class="form-check-input" type="checkbox" value="Physical Disablity (Orthopedic)" id="physicalDisablity" name="physicalDisablity">
+                        <label class="form-check-label" for="physicalDisablity">
                             Physical Disablity (Orthopedic)
                         </label>
                     </div>
                     <div class="form-check">
-                        <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
-                        <label class="form-check-label" for="flexCheckDefault">
+                        <input class="form-check-input" type="checkbox" value="Psychosocial Disability" id="psychosocialDisability" name="psychosocialDisability">
+                        <label class="form-check-label" for="psychosocialDisability">
                             Psychosocial Disability
                         </label>
                     </div>
                 </div>
                 <div class="col">
                     <div class="form-check">
-                        <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
-                        <label class="form-check-label" for="flexCheckDefault">
+                        <input class="form-check-input" type="checkbox" value="Speech and Language Impairment" id="speechAndLanguageImpairment" name="speechAndLanguageImpairment">
+                        <label class="form-check-label" for="speechAndLanguageImpairment">
                             Speech and Language Impairment
                         </label>
                     </div>
                     <div class="form-check">
-                        <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
-                        <label class="form-check-label" for="flexCheckDefault">
+                        <input class="form-check-input" type="checkbox" value="Visual Disability" id="visualDisability" name="visualDisability">
+                        <label class="form-check-label" for="visualDisability">
                             Visual Disability
                         </label>
                     </div>
                     <div class="form-check">
-                        <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
-                        <label class="form-check-label" for="flexCheckDefault">
+                        <input class="form-check-input" type="checkbox" value="Cancer (RA11215)" id="cancer" name="cancer">
+                        <label class="form-check-label" for="cancer">
                             Cancer (RA11215)
                         </label>
                     </div>
                     <div class="form-check">
-                        <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
-                        <label class="form-check-label" for="flexCheckDefault">
+                        <input class="form-check-input" type="checkbox" value="Rare Disease (RA10747)" id="rareDisease" name="rareDisease">
+                        <label class="form-check-label" for="rareDisease">
                             Rare Disease (RA10747)
                         </label>
                     </div>
-                    <h5>***MEDICAL CONDITION/DIAGNOSIS***</h5>
-                    <input type="text" name="" id="">
+                    <label class="form-check-label" for="medicalCondition">
+                        <h5>***MEDICAL CONDITION/DIAGNOSIS***</h5>
+                    </label>
+                    <input type="text" name="medicalCondition" id="medicalCondition">
                 </div>
             </div>
         </div>
@@ -287,30 +289,11 @@
         </div>
         <div class="col border1">
             <b>LANDLINE: </b>
-            <input class="text-center w-2" type="text" name="" id="" maxlength="1" size="1">
-            <input class="text-center w-2" type="text" name="" id="" maxlength="1" size="1">
-            <input class="text-center w-2" type="text" name="" id="" maxlength="1" size="1">
-            <input class="text-center w-2" type="text" name="" id="" maxlength="1" size="1">
-            <input class="text-center w-2" type="text" name="" id="" maxlength="1" size="1">
-            <input class="text-center w-2" type="text" name="" id="" maxlength="1" size="1">
-            <input class="text-center w-2" type="text" name="" id="" maxlength="1" size="1">
-            <input class="text-center w-2" type="text" name="" id="" maxlength="1" size="1">
-            <input class="text-center w-2" type="text" name="" id="" maxlength="1" size="1">
-            <input class="text-center w-2" type="text" name="" id="" maxlength="1" size="1">
+            <input class="form-control text-center" type="text" name="" id="" maxlength="10" size="10">
         </div>
         <div class="col border1">
             <b>MOBILE NO. OF PWD: </b>
-            <input class="text-center w-2" type="text" name="" id="" maxlength="1" size="1">
-            <input class="text-center w-2" type="text" name="" id="" maxlength="1" size="1">
-            <input class="text-center w-2" type="text" name="" id="" maxlength="1" size="1">
-            <input class="text-center w-2" type="text" name="" id="" maxlength="1" size="1">
-            <input class="text-center w-2" type="text" name="" id="" maxlength="1" size="1">
-            <input class="text-center w-2" type="text" name="" id="" maxlength="1" size="1">
-            <input class="text-center w-2" type="text" name="" id="" maxlength="1" size="1">
-            <input class="text-center w-2" type="text" name="" id="" maxlength="1" size="1">
-            <input class="text-center w-2" type="text" name="" id="" maxlength="1" size="1">
-            <input class="text-center w-2" type="text" name="" id="" maxlength="1" size="1">
-            <input class="text-center w-2" type="text" name="" id="" maxlength="1" size="1">
+            <input class="form-control text-center" type="text" name="" id="" maxlength="11" size="11">
         </div>
         <div class="col col-md-auto border1">
             <b>EMAIL ADDRESS:</b>
@@ -326,14 +309,14 @@
         <div class="col col-md-auto border1">
             <b>SEX</b>
             <div class="form-check">
-                <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault1">
-                <label class="form-check-label" for="flexRadioDefault1">
+                <input class="form-check-input" value="Male" type="radio" name="sex" id="male">
+                <label class="form-check-label" for="male">
                     Male
                 </label>
             </div>
             <div class="form-check">
-                <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault1">
-                <label class="form-check-label" for="flexRadioDefault1">
+                <input class="form-check-input" value="Female" type="radio" name="sex" id="female">
+                <label class="form-check-label" for="female">
                     Female
                 </label>
             </div>
@@ -348,23 +331,23 @@
                 <div class="row">
                     <div class="col">
                         <div class="form-check">
-                            <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault1">
-                            <label class="form-check-label" for="flexRadioDefault1">
+                            <input class="form-check-input" value="Single" type="radio" name="civilStatus" id="single">
+                            <label class="form-check-label" for="single">
                                 Single
                             </label>
                         </div>
                     </div>
                     <div class="col">
                         <div class="form-check">
-                            <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault1">
-                            <label class="form-check-label" for="flexRadioDefault1">
+                            <input class="form-check-input" value="Separated" type="radio" name="civilStatus" id="separated">
+                            <label class="form-check-label" for="separated">
                                 Separated
                             </label>
                         </div>
                     </div>
                     <div class="col">
                         <div class="form-check">
-                            <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault1">
+                            <input class="form-check-input" value="" type="radio" name="civilStatus" id="flexRadioDefault1">
                             <label class="form-check-label" for="flexRadioDefault1">
                                 Cohabitation (Live-in)
                             </label>
@@ -377,7 +360,7 @@
                 <div class="row">
                     <div class="col">
                         <div class="form-check">
-                            <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault1">
+                            <input class="form-check-input" value="" type="radio" name="civilStatus" id="flexRadioDefault1">
                             <label class="form-check-label" for="flexRadioDefault1">
                                 Separated
                             </label>
@@ -385,7 +368,7 @@
                     </div>
                     <div class="col">
                         <div class="form-check">
-                            <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault1">
+                            <input class="form-check-input" value="" type="radio" name="civilStatus" id="flexRadioDefault1">
                             <label class="form-check-label" for="flexRadioDefault1">
                                 Widow/er
                             </label>
@@ -763,7 +746,10 @@
         <div class="col border1">
             <b>ID REFERENCE NO.</b>
             <div>
-                <b>SSS NO. :</b><input type="tel" name="" id="">
+                <label class="form-check-label" for="sssNumber">
+                    <b>SSS NO. :</b>
+                </label>
+                <input type="tel" name="sssNumber" id="sssNumber">
             </div>
             <div>
                 <b>GSIS No.:</b><input type="tel" name="" id="">
