--- a/test.html
+++ b/test.html
@@ -1,45 +1,18 @@
 <!DOCTYPE html>
-<html>
-    <head>
-        <!-- Bootstrap -->
-        <link
-        href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css"
-        rel="stylesheet"
-        integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor"
-        crossorigin="anonymous"
-        />
-        <script
-        src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2"
-        crossorigin="anonymous"
-        ></script>
-        <title>jQuery PH Locations Demo</title>
-    </head>
-    <body>
-        <div class="row">
-            <div class="col">
-                <div class="row">
-                    <div class="col">
-                        1st COlumn
-                    </div>
-                    <div class="col">
-                        2nd COlumn
-                    </div>
-                </div>
-                
-            </div>
-
-             <div class="col">
-                <div class="row">
-                    <div class="col">
-                        1st COlumn
-                    </div>
-                    <div class="col">
-                        2nd COlumn
-                    </div>
-                </div>
-                
-            </div>
-        </div>
-    </body>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css/style.css">
+    <title>Document</title>
+</head>
+<body>
+    <div class="profile-pic-div">
+    <img src="images/image.jpg" id="photo">
+    <input type="file" id="file" accept="image/*">
+    <label for="file" id="uploadBtn">Choose Photo</label>
+</div>
+<script src="includes/app.inc.js"></script>
+</body>
 </html>
