--- a/sr-citizen-birthday-cash-gift.html
+++ b/sr-citizen-birthday-cash-gift.html
@@ -4,7 +4,7 @@
     include('header.html');
 ?> 
 
-<div class="container-fluid p-5" style="border-style: solid; border-radius: 15px;">
+<div class="container registration-form p-5">
     <!-- header -->
     <div class="row align-items-start">
         <div class="col">
