--- a/footer.html
+++ b/footer.html
@@ -2,7 +2,7 @@
       <!-- Grid container -->
       <div class="container-fluid p-4 pb-0">
         <!-- Section: Social media -->
-        <section class="mb-4">
+        <div class="mb-4">
           <!-- About Us -->
           <a
             class="btn btn-primary btn-floating m-1"
@@ -32,7 +32,7 @@
           <!-- Copyright -->
           <div>© 2022 Copyright: PUP Santa Rosa Campus</div>
           <!-- Copyright -->
-        </section>
+        </div>
         <!-- Section: Social media -->
       </div>
       <!-- Grid container -->
