--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
       exit();
   }
 ?>
+<section>
+
+
 <div class="text-center mt-4" id="login-container">
   <form id="login-form" action="includes/login.inc.php" method="post">
     <div class="display-5 mt-4 mb-4 text-white">
@@ -39,6 +42,7 @@
     <a href="sign-up.html" class="btn btn-success">Create Account</a>
   </form>
 </div>
+</section>
 <?php
   if (isset($_GET["username"])) {
       $username = $_GET['username'];
