--- a/about-us.html
+++ b/about-us.html
@@ -3,9 +3,9 @@
     $page = "about-us";
     include('header.html');
 ?>
-<div class="container">
+<section class="container">
     <h1>About Us</h1>
-</div>
+</section>
 <?php 
     include('footer.html');
 ?>
