--- a/home.html
+++ b/home.html
@@ -7,8 +7,7 @@
         exit();
     }
 ?> 
-
-<div class="container">
+<div class="container home-container">
     <h1>Home</h1>
     <h2><strong>Terms and Conditions</strong></h2>
 
@@ -133,10 +132,11 @@
     <p>The limitations and prohibitions of liability set in this Section and elsewhere in this disclaimer: (a) are subject to the preceding paragraph; and (b) govern all liabilities arising under the disclaimer, including liabilities arising in contract, in tort and for breach of statutory duty.</p>
 
     <p>As long as the website and the information and services on the website are provided free of charge, we will not be liable for any loss or damage of any nature.</p>
+</div>
+<div class="container" style="width: 80vh; margin-bottom: 20px;"> 
     <p>By clicking <strong>Register</strong> you agree with the Terms of Use and Privacy Notice</p>
     <a href="registration.html" class="btn btn-primary">Register</a>
 </div>
-
 <?php 
     include('footer.html');
 ?>
