--- a/contact-us.html
+++ b/contact-us.html
@@ -3,9 +3,21 @@
     $page = "contact-us";
     include('header.html');
 ?>
-<div class="container">
-    <h1>Contact Us</h1>
-</div>
+<section class="portfolio-block contact">
+    <div class="container">
+        <div class="heading">
+            <h2>Contact Us</h2>
+        </div>
+        <form>
+            <div class="mb-3"><label class="form-label" for="name">Your Name</label><input class="form-control item" type="text" id="name"></div>
+            <div class="mb-3"><label class="form-label" for="subject">Subject</label><input class="form-control item" type="text" id="subject"></div>
+            <div class="mb-3"><label class="form-label" for="email">Email</label><input class="form-control item" type="email" id="email"></div>
+            <div class="mb-3"><label class="form-label" for="message">Message</label><textarea class="form-control item" id="message"></textarea></div>
+            <input id="hire-date" class="form-control" type="date" />
+            <div class="mb-3"><button class="btn btn-primary btn-lg d-block w-100" type="submit">Send</button></div>
+        </form>
+    </div>
+</section>
 <?php 
     include('footer.html');
 ?>
