--- a/header.html
+++ b/header.html
@@ -28,8 +28,12 @@
     <script type="text/javascript" src="includes/funtion.inc.js"></script>
     <!-- Tab Icon -->
     <link rel="shortcut icon" href="images/santarosa-logo.ico" type="image/x-icon">
+    <!-- Material Icon -->
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Sharp:opsz,wght,FILL,GRAD@48,400,0,0" />
     <!-- External CSS -->
     <link rel="stylesheet" href="css/style.css">
+
+  
     <title>
       <?php 
         if($page == 'index'){echo 'CSWD';}
